--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: retrieval
-description: A starting point for Dart libraries or applications.
+description: A trie data structure Dart implementation — useful for autocomplete.
 version: 1.0.0
-repository: https://github.com/rohanchandra/retrieval
+repository: https://github.com/rohanchandra/retrieval.dart
 environment:
   sdk: ">=2.12.0 <3.0.0"
 dependencies:
